--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "sass": "^1.77.1",
     "usehooks-ts": "^3.1.0"
